# examples/tasklist-backend/src/main/kotlin/io/holunda/camunda/taskpool/example/tasklist/rest/impl/TaskController.kt
@@ -3,19 +3,16 @@ package io.holunda.camunda.taskpool.example.tasklist.rest.impl
 import io.holunda.camunda.taskpool.example.tasklist.auth.CurrentUserService
 import io.holunda.camunda.taskpool.example.tasklist.rest.Rest
 import io.holunda.camunda.taskpool.example.tasklist.rest.api.TasksApi
-import io.holunda.camunda.taskpool.example.tasklist.rest.filter.filter
-import io.holunda.camunda.taskpool.example.tasklist.rest.model.TaskDto
-import io.holunda.camunda.taskpool.view.TasksWithDataEntries
+import io.holunda.camunda.taskpool.example.tasklist.rest.mapper.TaskWithDataEntriesMapper
+import io.holunda.camunda.taskpool.example.tasklist.rest.model.TaskWithDataEntriesDto
+import io.holunda.camunda.taskpool.view.TaskWithDataEntries
 import io.holunda.camunda.taskpool.view.auth.UserService
 import io.holunda.camunda.taskpool.view.query.TasksDataEntryForUserQuery
-import io.swagger.annotations.ApiOperation
-import io.swagger.annotations.ApiParam
 import mu.KLogging
 import org.axonframework.queryhandling.QueryGateway
 import org.axonframework.queryhandling.responsetypes.ResponseTypes
 import org.springframework.http.ResponseEntity
 import org.springframework.http.ResponseEntity.ok
-import org.springframework.web.bind.annotation.GetMapping
 import org.springframework.web.bind.annotation.RequestMapping
 import org.springframework.web.bind.annotation.RequestParam
 import org.springframework.web.bind.annotation.RestController
@@ -27,63 +24,31 @@ import java.util.*
 open class TaskController(
   private val currentUserService: CurrentUserService,
   private val userService: UserService,
-  private val queryGateway: QueryGateway
+  private val queryGateway: QueryGateway,
+  private val mapper: TaskWithDataEntriesMapper
 ) : TasksApi {
 
   companion object : KLogging()
 
   override fun getTasks(
-    @RequestParam(value = "page") page: Optional<String>,
-    @RequestParam(value = "size") size: Optional<String>,
-    @RequestParam(value = "sort") sort: Optional<String>,
-    @RequestParam(value = "filter") filters: Optional<List<String>>
-  ): ResponseEntity<List<TaskDto>> {
-
-    logger.info("page=$page, size=$size, sort=$sort, filter=$filters")
+    @RequestParam(value = "page") page: Optional<Int>,
+    @RequestParam(value = "size") size: Optional<Int>,
+    @RequestParam(value = "sort") sort: Optional<List<String>>,
+    @RequestParam(value = "filters") filters: Optional<List<String>>
+  ): ResponseEntity<List<TaskWithDataEntriesDto>> {
 
     val username = currentUserService.getCurrentUser()
     val user = userService.getUser(username)
 
-
-    // val allTasks = queryGateway.query(TasksForUserQuery(user), ResponseTypes.multipleInstancesOf(Task::class.java))
-    val all: List<TasksWithDataEntries> = queryGateway
-      .query(TasksDataEntryForUserQuery(user), ResponseTypes.multipleInstancesOf(TasksWithDataEntries::class.java))
+    val result: List<TaskWithDataEntries> = queryGateway
+      .query(TasksDataEntryForUserQuery(
+        user = user,
+        page = page,
+        size = size,
+        sort = sort.orElseGet { listOf() },
+        filters = filters.orElseGet { listOf() }
+      ), ResponseTypes.multipleInstancesOf(TaskWithDataEntries::class.java))
       .join()
-
-    val filtered = if (filters.isPresent) {
-      filter(filters.get(), all)
-    } else {
-      all
-    }
-
-
-    return ok(filtered.map { TaskDto().id(it.task.id)}
-    )
+    return ok(result.map { mapper.dto(it) })
   }
-
-
-  @ApiOperation("Loads all tasks for given user with amount greater than specified.")
-  @GetMapping("/tasks-with-data")
-  open fun getTasksWithDataForUser(
-    @RequestParam("username") @ApiParam("Username of the user.", required = true) username: String,
-    @RequestParam("amount") @ApiParam("Amount of the request.", required = true) amount: String
-  ): ResponseEntity<List<TasksWithDataEntries>> {
-
-    val user = userService.getUser(username)
-
-    return ok(
-      queryGateway
-        .query(TasksDataEntryForUserQuery(user), ResponseTypes.multipleInstancesOf(TasksWithDataEntries::class.java))
-        .join()
-      /*
-      .filter { task ->
-        task.dataEntries
-          .asSequence()
-          .filter { it.entryType == BusinessDataEntry.REQUEST }
-          .map { it.payload as Request }
-          .map { it.amount }
-          .reduce { acc, value -> if (value > acc) value else acc } >= BigDecimal(amount)
-      } */)
-  }
-
 }
